Refactor UniRig: Remove flash-attn dependency and improve output organization
- Remove flash-attn dependency from UniRig (replaced with standard PyTorch attention)
  - Replace flash_attn.modules.mha.MHA with CompatibleMHA in unirig_skin.py
  - Disable flash attention in PTv3Object.py and use standard attention
  - Remove flash_attention_2 from unirig_ar model config
  - Update requirements.txt to remove flash_attn

- Fix compatibility issues
  - Add torch.serialization.add_safe_globals for PyTorch 2.7+ checkpoint loading
  - Fix patch_size division by zero errors in PTv3Object
  - Ensure patch_size is always >= 1 to prevent RuntimeError

- Improve output organization
  - Use timestamped output folders (YYYYMMDD_HH_MM_SS) matching other generation scripts
  - Organize outputs: skeleton.fbx, skin.fbx, rigged.{format} in timestamped folder
  - Move intermediate NPZ files to intermediate/ subfolder

- Update .gitignore
  - Ignore generated FBX/OBJ files in examples directory
  - Keep GLB input files tracked
  - Add patterns for crash dumps, cache files, and intermediate processing files

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ checkpoints/
 output/
 uploads/
 
-# Configuration files
+# Configuration files (generated)
 config.json
 
 # OS files
@@ -38,9 +38,44 @@ Thumbs.db
 
 # Logs
 *.log
+logs/
+lightning_logs/
 
 # Temporary files
 *.tmp
 *.temp
 
-pretrained_weights
+# Pretrained weights (large model files)
+pretrained_weights/
+
+# Erlang crash dumps
+*.dump
+erl_crash.dump
+
+# Intermediate processing files
+*.npz
+# But keep example/test npz files if needed
+!thirdparty/UniRig/examples/**/*.npz
+
+# Generated output files in examples directory (FBX, OBJ, etc.)
+# Keep GLB input files, but ignore generated outputs
+thirdparty/UniRig/examples/**/*.fbx
+thirdparty/UniRig/examples/**/*.obj
+# Allow GLB files (these are input examples)
+!thirdparty/UniRig/examples/**/*.glb
+
+# Blender cache
+*.blend1
+*.blend2
+
+# Jupyter/Notebook checkpoints
+.ipynb_checkpoints/
+
+# Hugging Face cache
+.cache/
+*.cache
+
+# UniRig intermediate files
+thirdparty/UniRig/logs/
+thirdparty/UniRig/lightning_logs/
+thirdparty/UniRig/erl_crash.dump
