Fix RigNet generation: binvox compatibility, function signatures, and temp file cleanup
- Fix binvox parser to skip comment lines in binvox output
- Use shell=True for binvox subprocess on Windows for compatibility
- Add mesh_filename parameter to predict_skeleton() and predict_skinning()
- Change default target vertices from 3000 to 2000
- Update .gitignore to exclude RigNet temporary files (*_temp_rignet*, *_normalized*)
- Add progress output for joint prediction and meanshift clustering
- Fix checkpoint path to use gcn_meanshift instead of pretrain_jointnet
- Add safe state_dict loading with fallback for key mismatches

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,17 @@ checkpoints/
 output/
 uploads/
 
+# Temporary files in thirdparty (generated during processing)
+thirdparty/*_temp_*.obj
+thirdparty/*_temp_*.binvox
+thirdparty/*_temp_*.mtl
+thirdparty/*_normalized.obj
+thirdparty/*_normalized.binvox
+
 # Configuration files (generated)
 config.json
+# But allow checkpoints/config.json (model configs)
+!checkpoints/config.json
 
 # OS files
 .DS_Store
@@ -44,6 +53,16 @@ lightning_logs/
 # Temporary files
 *.tmp
 *.temp
+
+# RigNet temporary files
+*_temp_rignet.obj
+*_temp_rignet_normalized.obj
+*_temp_rignet_normalized.binvox
+*_temp_rignet.mtl
+*_temp_rignet_rig.txt
+*_normalized.obj
+*_normalized.binvox
+*_simplified.obj
 
 # Pretrained weights (large model files)
 pretrained_weights/
