Fix OmniPart generation: add missing dependencies, fix argument names, add debug prints, fix torch.scatter deprecation
- Add missing dependencies: einops, pytz, scikit-image, plyfile, flash_attn
- Fix torch_scatter CUDA version mismatch (cu118 -> cu121)
- Fix argument names to support both hyphen and underscore formats
- Add group number visualization to mask segments
- Fix torch.scatter deprecation warning by using scatter_reduce
- Add extensive debug prints to track SIGFPE crashes
- Improve error handling and validation in inference script

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,5 @@ thirdparty/blender-meshoptimizer/meshoptimizer/
 thirdparty/UniRig/logs/
 thirdparty/UniRig/lightning_logs/
 thirdparty/UniRig/erl_crash.dump
+
+outputs/*
